<resources>
    <string name="app_name">Yangtube Music</string>
    <string name="home">홈</string>
    <string name="explore">둘러보기</string>
    <string name="library">보관함</string>
    <string name="connect_to_device">기기에 연결</string>
    <string name="search">검색</string>
    <string name="account">계정</string>
    <string name="start_radio_from_a_song">이 노래로 뮤직 스테이션 시작하기</string>
    <string name="quick_picks">빠른 선곡</string>
    <string name="start_radio">뮤직 스테이션 시작</string>
    <string name="play_next">다음 재생</string>
    <string name="add_to_queue">목록에 추가</string>
    <string name="add_to_library">보관함에 추가</string>
    <string name="remove_from_library">보관함에서 삭제</string>
    <string name="download">오프라인 저장</string>
    <string name="add_to_playlist">재생목록에 추가</string>
    <string name="go_to_album">앨범으로 이동</string>
    <string name="go_to_artist">아티스트 페이지로 이동</string>
    <string name="share">공유</string>
    <string name="downloads">오프라인 저장 콘텐츠</string>
    <string name="playlists">재생목록</string>
    <string name="albums">앨범</string>
    <string name="songs">노래</string>
    <string name="artists">아티스트</string>
    <string name="subscriptions">구독</string>
    <string name="more">더보기</string>
    <string name="listen_again">다시 듣기</string>
    <string name="mixed_for_you">맞춤 믹스</string>
    <string name="similar_to">아래 아티스트를 좋아한다면</string>
    <string name="subscribe">구독</string>
    <string name="shuffle_play">셔플 재생</string>
    <string name="add_playlist_to_library">보관함에 재생목록 추가</string>

    <string name="song_title">Pockets</string>
    <string name="artist">이지 라이프</string>
</resources>