<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/almost_black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageMusicThumbnail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/thumbnail" />

            <TextView
                android:id="@+id/textMusicTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/textMusicArtist"
                app:layout_constraintEnd_toStartOf="@+id/buttonThumbDown"
                app:layout_constraintStart_toEndOf="@+id/imageMusicThumbnail"
                app:layout_constraintTop_toTopOf="@+id/imageMusicThumbnail"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="내 기쁨은 네가 벤틀리를 끄는 거야" />

            <TextView
                android:id="@+id/textMusicArtist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/imageMusicThumbnail"
                app:layout_constraintEnd_toEndOf="@+id/textMusicTitle"
                app:layout_constraintStart_toStartOf="@+id/textMusicTitle"
                app:layout_constraintTop_toBottomOf="@+id/textMusicTitle"
                tools:text="김승민" />

            <ImageView
                android:id="@+id/buttonThumbDown"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_thumb_down"
                app:layout_constraintBottom_toBottomOf="@+id/imageMusicThumbnail"
                app:layout_constraintEnd_toStartOf="@+id/buttonThumbUp"
                app:layout_constraintTop_toTopOf="@+id/imageMusicThumbnail" />

            <ImageView
                android:id="@+id/buttonThumbUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_thumb_up"
                app:layout_constraintBottom_toBottomOf="@+id/imageMusicThumbnail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageMusicThumbnail" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageMusicThumbnail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonStartRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/start_radio"
            app:icon="@drawable/ic_start_radio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerWrap" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonPlayNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/play_next"
            app:icon="@drawable/ic_playlist_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonStartRadio" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonAddToQueue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/add_to_queue"
            app:icon="@drawable/ic_list_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonPlayNext" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonRemoveFromLibrary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/add_album_to_library"
            app:icon="@drawable/ic_add_to_playlist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonAddToQueue" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/download"
            app:icon="@drawable/ic_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonRemoveFromLibrary" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonAddToPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/add_to_playlist"
            app:icon="@drawable/ic_playlist_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonDownload" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonGoToAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/go_to_album"
            app:icon="@drawable/ic_album"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonAddToPlaylist" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonGoToArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/go_to_artist"
            app:icon="@drawable/ic_person_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonGoToAlbum" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/share"
            app:icon="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonGoToArtist" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>