<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/almost_black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageArtistThumbnail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/thumbnail" />

            <TextView
                android:id="@+id/textArtistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/textArtistSubscribers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageArtistThumbnail"
                app:layout_constraintTop_toTopOf="@+id/imageArtistThumbnail"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="김승민" />

            <TextView
                android:id="@+id/textArtistSubscribers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="@+id/imageArtistThumbnail"
                app:layout_constraintEnd_toEndOf="@+id/textArtistName"
                app:layout_constraintStart_toStartOf="@+id/textArtistName"
                app:layout_constraintTop_toBottomOf="@+id/textArtistName"
                tools:text="구독자 6.15천명" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageArtistThumbnail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonShufflePlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/shuffle_play"
            app:icon="@drawable/ic_shuffle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerWrap" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonStartRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/start_radio"
            app:icon="@drawable/ic_start_radio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonShufflePlay" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonSubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/subscribe"
            app:icon="@drawable/ic_subscriptions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonStartRadio" />

        <com.patrick.yangtubemusic.presentation.bottomsheet.BottomSheetButton
            android:id="@+id/buttonShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:description="@string/share"
            app:icon="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSubscribe" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>